# EmbeddedSysFinal-2023

./: .clang-format  CMakeLists.txt  LSTM.cpp  LSTM.h  README.md  benchmark.cpp  test.sh
